Ahora se puede filtrar por color de las etiquetas.